finished maybe? maybe i'll add the shirt

--- a/Trab3RaulSteinmetz/Trab3RaulSteinmetz/src/TODO.txt
+++ b/Trab3RaulSteinmetz/Trab3RaulSteinmetz/src/TODO.txt
@@ -1,4 +1,1 @@
-ajustar o angulo entre os dois pistoes (EXTRA DOIS PONTOS)
-selecionar o que mostrar e o que nao mostrar (BASICO)
-talvez transladar
-ajustar o rpm
+fazer camisa
